# charon6

./: .dockerignore  .editorconfig  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  release.yml
src/: capture.rs  cidr.rs  cipher.rs  codec.rs  lib.rs  main.rs  nix.rs  packet.rs  receiver.rs  sender.rs  test_helpers.rs  transport.rs  xtea.rs
tests/: cli.rs  e2e.rs  smoke.rs
tests/common/: mod.rs
