[package]
name = "charon6"
version = "0.1.0"
edition = "2024"
description = "Covert data transmission via IPv6 destination addresses"
license = "MIT"

[dependencies]
cipher = "0.5"
clap = { version = "4.6.1", features = ["derive"] }
nix = { version = "0.31", features = ["socket", "net"] }
sha2 = "0.10"
xtea = "0.1"
