[package]
name = "charon6"
version = "0.1.1"
edition = "2024"
description = "Abusing the IPv6 address space to transmit data covertly"
license = "MIT"

[dependencies]
cipher = "0.5"
clap = { version = "4.6.1", features = ["derive"] }
hmac = "0.12"
nix = { version = "0.31", features = ["socket", "net"] }
pbkdf2 = { version = "=0.12.2", features = ["hmac"] }
sha2 = "0.10"
xtea = "0.1"
